nog meer joh toe maar

--- a/homepage.html
+++ b/homepage.html
@@ -160,7 +160,6 @@
                                 <li><a class="menu-link line" href="groupdeliverable3.html" target="_blank" rel="noopener noreferrer">Group Project: Research Methods Research</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Design Process Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -173,7 +172,6 @@
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable5.html" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Design Process Personal Website</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: UML Class Diagram Personal Website</a></li>
                             </ul>
                         </td>
@@ -185,7 +183,7 @@
                                 <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable7.html" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable6.html" target="_blank" rel="noopener noreferrer">Group Project: The SCRUM Master</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Requirements Personal Website</a></li>
                             </ul>
                         </td>
@@ -214,7 +212,8 @@
                                 <li><a class="menu-link line" href="groupdeliverable9.html" target="_blank" rel="noopener noreferrer">Group Project: Methods and Tooling</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable10.html" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: UML Class Diagram Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -228,7 +227,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable11.html" target="_blank" rel="noopener noreferrer">Group Project: Advice Report</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Dutch Design Week</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Malaga</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
                             </ul>
                         </td>
                     </tr>
