--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -30,7 +30,7 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">USER RESEARCH PLAN</h1>
-      <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
+      <p class="product-text">DELIVERABLE CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
     </section>
   <div class="width">
       <h2 class="guide">INTRO</h2>
