--- a/individualdeliverable2.html
+++ b/individualdeliverable2.html
@@ -30,7 +30,7 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">WIREFRAMES AND MOCKUPS</h1>
-      <p class="product-text">DOCUMENTING THE PROCESS OF ITERATIVELY WORKING ON THE DESIGN OF THE PORTFOLIO.</p>
+      <p class="product-text">DELIVERABLE CONTAINING DOCUMENTING THE PROCESS OF ITERATIVELY WORKING ON THE DESIGN OF THE PORTFOLIO.</p>
     </section>
     <div class="width">
         <h2 class="guide">INTRO</h2>
