--- a/individualdeliverable5.html
+++ b/individualdeliverable5.html
@@ -30,7 +30,7 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">PERSONAL REFLECTION AND EVALUATION</h1>
-      <p class="product-text">PERSONAL REFLECTION AND EVALUATUON ON THE INDIVIDUAL PROJECT.</p>
+      <p class="product-text">DELIVERABLE CONTAINING PERSONAL REFLECTION AND EVALUATUON ON THE INDIVIDUAL PROJECT.</p>
     </section>
     <div class="width">
         <h2 class="guide">JUDGEMENT & COMMUNICATION</h2>
