--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -30,7 +30,7 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">FRONT-END FRAMEWORK RESEARCH</h1>
-      <p class="product-text">REPORT CONTAINING THE RESEARCH THAT HAS BEEN DONE REGARDING FRONT-END FRAMEWORKS.</p>
+      <p class="product-text">DELIVERABLE CONTAINING THE RESEARCH THAT HAS BEEN DONE REGARDING FRONT-END FRAMEWORKS.</p>
     </section>
     <div class="width">
       <h2 class="guide">INTRO</h2>
