--- a/individualdeliverable6.html
+++ b/individualdeliverable6.html
@@ -30,7 +30,7 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">METHODS AND TOOLING</h1>
-      <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
+      <p class="product-text">DELIVERABLE CONTAINING THE METHODS AND TOOLING THAT HAS BEEN USED DURING THE INDIVIDUAL PROJECT.</p>
     </section>
     <div class="width">
         <h2 class="guide">FIGMA</h2>
