--- a/homepage.html
+++ b/homepage.html
@@ -146,7 +146,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable1.html" target="_blank" rel="noopener noreferrer">Group Project: Personas</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Requirements Personal Website</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Requirements Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -171,8 +171,8 @@
                                 <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable5.html" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: UML Class Diagram Personal Website</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable3.html" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">Personal Project: UML Use Case Diagram Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -183,8 +183,8 @@
                                 <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable7.html" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable6.html" target="_blank" rel="noopener noreferrer">Group Project: The SCRUM Master</a></li>
-                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Requirements Personal Website</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable4.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Requirements Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -194,7 +194,6 @@
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable4.html" target="_blank" rel="noopener noreferrer">Individual Project: Front-End Framework Research</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Reading Guide Document</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable3.html" target="_blank" rel="noopener noreferrer">Group Project: Research Methods Research</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
@@ -211,9 +210,9 @@
                                 <li><a class="menu-link line" href="groupdeliverable8.html" target="_blank" rel="noopener noreferrer">Group Project: (Personal) Evaluation and Reflection</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable9.html" target="_blank" rel="noopener noreferrer">Group Project: Methods and Tooling</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable10.html" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
-                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: UML Class Diagram Personal Website</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable3.html" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable4.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">Personal Project: UML Use Case Diagram Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -225,8 +224,8 @@
                                 <li><a class="menu-link line" href="groupdeliverable8.html" target="_blank" rel="noopener noreferrer">Group Project: (Personal) Evaluation and Reflection</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable10.html" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable11.html" target="_blank" rel="noopener noreferrer">Group Project: Advice Report</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Dutch Design Week</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Malaga</a></li>
+                                <li><a class="menu-link line" href="internationaldeliverable1.html" target="_blank" rel="noopener noreferrer">International Project: Dutch Design Week</a></li>
+                                <li><a class="menu-link line" href="internationaldeliverable2.html" target="_blank" rel="noopener noreferrer">International Project: Malaga</a></li>
                                 <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
                             </ul>
                         </td>
