--- a/individualdeliverable7.html
+++ b/individualdeliverable7.html
@@ -77,6 +77,18 @@
     </div>
     <div class="reveal">
       <div class="width">
+        <h2 class="guide">VERSION CONTROL</h2>
+        <p class="desc">
+          I used Visual Studio's version control to keep my portfolio stored. If something went wrong during development, I could easily revert changes through Github.
+        </p>
+        <div class="company">
+          <img src="./images/github.png" class="deliverable">
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
         <h2 class="guide">REFERENCES</h2>
         <p class="desc">
           Tahmid Ahmed. (2023, 10 augustus). Build a complete personal portfolio website using HTML, CSS, and JavaScript [Video]. YouTube. https://www.youtube.com/watch?v=ssEiM3zyN08
