--- a/internationaldeliverable3.html
+++ b/internationaldeliverable3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dutch Design Week</title>
+  <title>Out Of Space Week</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -29,54 +29,39 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">INTERNATIONAL PROJECT</h2>
-      <h1 class="product-heading">DUTCH DESIGN WEEK</h1>
-      <p class="product-text">DELIVERABLE CONTAINING THE DUTCH DESIGN WEEK PROJECT</p>
+      <h1 class="product-heading">OUT OF SPACE WEEK</h1>
+      <p class="product-text">DELIVERABLE CONTAINING OUT OF SPACE PROJECT.</p>
     </section>
   <div class="width">
       <h2 class="guide">INTRO</h2>
-          <p class="desc">
-            During the Dutch Design Week, I have visited a lot of exhibitions. These exhibitions were mainly related to the DDW narrative: product & craft design. I have seen a lot of exhibitions which were related to sustainability, which is something that was taken into account for the final product for this week.
-          </p>
+        <p class="desc">
+        During the Out Of Space week I have worked on the Out of Space project. My planet was called Keplar-
+        452B. I was part of the science department together with three other students. In this department we set our goals and divided tasks.
+        </p>
       <hr class="version">
   </div>
   <div class="reveal">
     <div class="width">
-        <h2 class="guide">IMAGES</h2>
-        <div class="company">
-            <img src="./images/ddw1.jpg" class="deliverable">
-        </div>
-        <div class="company">
-            <img src="./images/ddw2.jpg" class="deliverable">
-        </div>
-        <div class="company">
-            <img src="./images/ddw3.jpg" class="deliverable">
-        </div>
-        <div class="company">
-            <img src="./images/ddw4.jpg" class="deliverable">
-        </div>
-        <hr class="version">
-    </div>
-  </div>
-  <div class="reveal">
-    <div class="width">
-        <h2 class="guide">FINAL VIDEO</h2>
-        <div class="company">
-            <iframe class="video" src="https://stichtingfontys.sharepoint.com/sites/AdvancedMediaDesignSept23-Jan24/_layouts/15/embed.aspx?UniqueId=292fd8fd-a2a0-469f-9156-4b1278e19a54&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="1280" height="720" frameborder="0" scrolling="no" allowfullscreen title="Group 2 DEMO.MOV"></iframe>
-        </div>
-        <hr class="version">
-    </div>
-  </div>
-  <div class="reveal">
-    <div class="width">
-        <h2 class="guide">EVALUATION</h2>
+        <h2 class="guide">MY WORK</h2>
         <p class="desc">
-            During the Dutch Design Week I have learned the following:
-            <ul class="target-list">
-                <li>Creating a product related to the Dutch Design Week in a short time period.</li>
-                <li>Working in a team form together with Canadian culture.</li>
-            </ul>
+            During this week, my work was mainly focussed towards creative thinking, and creating the final product video. It was also fun to get to know lower semester students, and giving them advice where needed.
         </p>
         <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+        <h2 class="guide">VIDEO</h2>
+        <p class="desc">Watch the video that I put together for this week below:</p>
+        <div class="company">
+            <iframe class="video" width="1130" height="635" src="https://www.youtube.com/embed/WrbXiBvmvE4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
+    <div class="company-btn">
+      <a onclick="window.open('https://drive.google.com/file/d/1bpSQZkmCUE-4HVL4y4Ni8gsNWe-19yCy/view?usp=sharing')" class="explore-btn">Reflection Document</a>
     </div>
   </div>
   </main>
