--- a/personaldeliverable2.html
+++ b/personaldeliverable2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UML Class Diagram Personal Website</title>
+  <title>UML Use Case Diagram</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -29,19 +29,56 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">PERSONAL PROJECT</h2>
-      <h1 class="product-heading">UML CLASS DIAGRAM PERSONAL WEBSITE</h1>
+      <h1 class="product-heading">UML USE CASE DIAGRAM</h1>
       <p class="product-text">DELIVERABLE CONTAINING A WORKED OUT SCHEMATIC UML CLASS DIAGRAM FOR A PERSONAL WEBSITE.</p>
     </section>
   <div class="width">
       <h2 class="guide">INTRO</h2>
           <p class="desc">
-              This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
-              The linked research question to this deliverable is:
+              For my personal project, I planned on working on my mothers personal website. For this website, I have created a UML use case diagram. I came up with a question for myself:
               <ul class="target-list">
-                <li>Hoe kan ik een gebruiksvriendelijke portfolio opstellen, waardoor de gebruiker niet zelf naar informatie hoeft te zoeken?</li>
+                <li>How do I create an overview of the architecture of the current website, so that I can apply the same logic to the redesigned website?</li>
               </ul>
           </p>
       <hr class="version">
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">WHICH DIAGRAM?</h2>
+      <p class="desc">I wanted to create a form of schematic overview of the website. Initially I wanted to make a choice between two visualisations:
+        <ul class="target-list">
+          <li>C4 Model</li>
+          <li>UML Class Diagram</li>
+        </ul>
+      </p>
+      <p class="desc">
+        Because I already had done an attempt on a C4 Model in <a class="menu-link line" href="individualdeliverable7.html" target="_blank" rel="noopener noreferrer">portfolio development</a>, I wanted to try something else for this website. I had created UML Class Diagrams before, and I started out with this. However, after adding some classes I realized that an UML Class Diagram for a simple website as this was overly complex.
+      </p>
+      <p class="desc">
+        At this time I was looking at YouTube tutorials about UML class diagrams, but then I stumbled upon <a class="menu-link line" href="https://www.youtube.com/watch?v=4emxjxonNRI" target="_blank" rel="noopener noreferrer">this</a> video on UML use case diagrams.
+      </p>
+      <p class="desc">After watching this video, I noticed that such a diagram would visualize what I was working towards neatly.</p>
+      <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">FINAL DIAGRAM</h2>
+      <p class="desc">
+        Below you can see the final diagram that I have created:
+      </p>
+      <div class="company">
+        <img src="./images/umlusecase.png" class="deliverable">
+      </div>
+      <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">REFERENCES</h2>
+      <p class="desc">Lucid Software. (2023, 21 september). UML use case diagrams [Video]. YouTube. https://www.youtube.com/watch?v=4emxjxonNRI</p>
+      <hr class="version">
+    </div>
   </div>
   </main>
   
