--- a/personaldeliverable3.html
+++ b/personaldeliverable3.html
@@ -35,13 +35,31 @@
   <div class="width">
       <h2 class="guide">INTRO</h2>
           <p class="desc">
-              This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
-              The linked research question to this deliverable is:
-              <ul class="target-list">
-                <li>Hoe kan ik een gebruiksvriendelijke portfolio opstellen, waardoor de gebruiker niet zelf naar informatie hoeft te zoeken?</li>
-              </ul>
+              To assist learning outcome three, Bardt and Stan have given us the opportunity to work on a programming project on the side. I had decided to join in on Stan's project, since he was mainly focusing on animations in websites, which is something is was most interested in.
           </p>
       <hr class="version">
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">START</h2>
+      <p class="desc">During the first session, I managed to get the start-up project that Stan created running with Vite. From here, I added a new class named Menu.</p>
+      <div class="company">
+        <img src="./images/gsap.png" class="deliverable">
+      </div>
+      <p class="desc">After doing this, animating different components in the website was straightforward. However, I did not get the chance to do a lot of animations for this project, because the group challenge was still the priority, which caused me to leave this project on the side.</p>
+      <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">EVALUATION</h2>
+      <p class="desc">At the end of the semester, I do not have a lot to show for this project that is different than the barebones project that I started off with. I did however gain some learning points that I am taking with me:
+        <ul class="target-list">
+          <li>An introduction to using Vite and gsap which was actually quite easier to use than I had anticpated.</li>
+          <li>What type of variables can be used to animate specific components in JavaScript.</li>
+        </ul>
+      </p>
+    </div>
   </div>
   </main>
   
