--- a/international.html
+++ b/international.html
@@ -100,8 +100,7 @@
               <ul class="target-list">
                 <li>Creating a product related to the Dutch Design Week in a short time period.
                 </li>
-                <li>Making sure that the methods that I choose for the user research plan are useful, and do not go to waste.
-                </li>
+                <li>Working in a team form together with Canadian culture.</li>
               </ul>
             </p>
             <hr>
@@ -144,7 +143,19 @@
                   <h3>LO-7</h3>  
                 </div>          
               </div>
-            </div>            
+            </div>
+            
+            <div class="row" onclick="window.open('internationaldeliverable3.html')" style="cursor: pointer;">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Out Of Space Week</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-7</h3>  
+                </div>          
+              </div>
+            </div>     
           </div>
         </section>
       </div>
