--- a/personal.html
+++ b/personal.html
@@ -131,7 +131,7 @@
               <img src="./images/bggif.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
-                  <h2>UML Class Diagram Personal Website</h2>
+                  <h2>UML Use Case Diagram Personal Website</h2>
                 </div>
                 <div class="learningoutcome">
                   <h3>LO-3</h3>
