--- a/group.html
+++ b/group.html
@@ -234,7 +234,7 @@
             </div>
 
             <div class="row" onclick="window.open('groupdeliverable1.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/personas.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Personas</h2>
@@ -259,7 +259,7 @@
             </div>
 
             <div class="row" onclick="window.open('groupdeliverable9.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/figma.jpg" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Methods and Tooling</h2>
@@ -271,7 +271,7 @@
             </div>
 
             <div class="row" onclick="window.open('groupdeliverable10.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/presentation.jpg" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Update Presentation</h2>
