--- a/homepage.html
+++ b/homepage.html
@@ -257,7 +257,7 @@
                     </section>                        
                 </div>
                 <div onclick="window.open('personal.html')" class="project" style="cursor: pointer;">
-                    <img src="./images/personal.gif" alt="" class="grid-img">
+                    <img src="./images/peoplespeephole.png" alt="" class="grid-img">
                     <section class="project-info">
                         <h1 class="projectname">Personal Project</h1>
                     </section>                        
