--- a/individual.html
+++ b/individual.html
@@ -168,7 +168,7 @@
             </div>
             
             <div class="row" onclick="window.open('individualdeliverable2.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/mockups.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Wireframes and Mockups</h2>
@@ -194,7 +194,7 @@
             </div>
 
             <div class="row" onclick="window.open('individualdeliverable7.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/port.gif" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Portfolio Development</h2>
@@ -206,7 +206,7 @@
             </div>
 
             <div class="row" onclick="window.open('individualdeliverable8.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/homepage.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Portfolio Iterations</h2>
@@ -219,7 +219,7 @@
             </div>
 
             <div class="row" onclick="window.open('individualdeliverable4.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/react.jpg" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Front-End Framework Research</h2>
@@ -244,7 +244,7 @@
             </div>
 
             <div class="row" onclick="window.open('individualdeliverable6.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/figma.jpg" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Methods and Tooling</h2>
