--- a/international.html
+++ b/international.html
@@ -122,7 +122,7 @@
         <section class="proof" id="proof">
           <div class="proof-content">
             <div class="row" onclick="window.open('internationaldeliverable1.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/ddw1.jpg" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Dutch Design Week</h2>
@@ -134,7 +134,7 @@
             </div>
             
             <div class="row" onclick="window.open('internationaldeliverable2.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/malaga.jpg" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Malaga</h2>
@@ -146,7 +146,7 @@
             </div>
             
             <div class="row" onclick="window.open('internationaldeliverable3.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/oos.jpg" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Out Of Space Week</h2>
