--- a/internationaldeliverable2.html
+++ b/internationaldeliverable2.html
@@ -51,6 +51,7 @@
         <h2 class="guide">REFLECTION</h2>
         <p class="desc">After leaving the conference on the second day, I came to the realization that this conference was nothing for me. Listening to others, and their knowledge was nice, but I feel like especially in Media Design it is a learning process as you go. Things that were said, were things you would eventually learn yourself by experiencing it, if you have interest in that specific topic.</p>
         <p class="desc">Hence why my conclusion from the WeyWeyWeb conference is that I would like to experience different fields in Media Design that I did not know of before, and learn by experiencing these fields.</p>
+        <hr class="version">
     </div>
   </div>
   </main>
