--- a/personal.html
+++ b/personal.html
@@ -128,7 +128,7 @@
             </div>
             
             <div class="row" onclick="window.open('personaldeliverable2.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/bggif.gif">
               <div class="main-row">
                 <div class="row-text">
                   <h2>UML Use Case Diagram Personal Website</h2>
@@ -153,7 +153,7 @@
             </div>   
             
             <div class="row" onclick="window.open('personaldeliverable4.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/peoplespeephole.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Finding Internship</h2>
