--- a/group.html
+++ b/group.html
@@ -156,7 +156,7 @@
         <section class="proof" id="proof">
           <div class="proof-content">
             <div class="row" onclick="window.open('groupdeliverable7.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/logo.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Project Plan</h2>
@@ -168,7 +168,7 @@
             </div>
 
             <div class="row" onclick="window.open('groupdeliverable3.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/nngroup.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Testing Methods Research</h2>
@@ -181,7 +181,7 @@
             </div>
 
             <div class="row" onclick="window.open('groupdeliverable2.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/wattetesten.jpg" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>User Testing Plan</h2>
@@ -195,7 +195,7 @@
             </div>
             
             <div class="row" onclick="window.open('groupdeliverable4.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/firstversions.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Design Contribution</h2>
@@ -209,7 +209,7 @@
             </div>            
 
             <div class="row" onclick="window.open('groupdeliverable5.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/poc.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Proof of Concepts</h2>
@@ -221,7 +221,7 @@
             </div>
 
             <div class="row" onclick="window.open('groupdeliverable6.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/Retrospective.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>The Scrum Master</h2>
@@ -284,7 +284,7 @@
             </div>
 
             <div class="row" onclick="window.open('groupdeliverable11.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/logo2.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Advice Report</h2>
