--- a/groupdeliverable3.html
+++ b/groupdeliverable3.html
@@ -59,6 +59,9 @@
             <li>Remote or face-to-face</li>
           </ul>
         </p>
+        <div class="company">
+          <img src="./images/nngroup.png" alt="" class="deliverable">
+        </div>
         <p class="desc">After this, several research methods were chosen for which these types are applicable:
           <ul class="target-list">
             <li>Usability testing</li>
