--- a/personal.html
+++ b/personal.html
@@ -128,7 +128,7 @@
             </div>
             
             <div class="row" onclick="window.open('personaldeliverable2.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif">
+              <img src="./images/umlusecase2.png">
               <div class="main-row">
                 <div class="row-text">
                   <h2>UML Use Case Diagram Personal Website</h2>
@@ -140,7 +140,7 @@
             </div>   
             
             <div class="row" onclick="window.open('personaldeliverable3.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/gsap.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Broken Car Challenge</h2>
