--- a/individual.html
+++ b/individual.html
@@ -154,7 +154,7 @@
         <section class="proof" id="proof">
           <div class="proof-content">
             <div class="row" onclick="window.open('individualdeliverable1.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/dummy.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>User Research Plan</h2>
@@ -181,7 +181,7 @@
             </div>            
             
             <div class="row" onclick="window.open('individualdeliverable3.html')" style="cursor: pointer;">
-              <img src="./images/bggif.gif" alt="">
+              <img src="./images/notion.png" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Project Plan</h2>
@@ -194,7 +194,7 @@
             </div>
 
             <div class="row" onclick="window.open('individualdeliverable7.html')" style="cursor: pointer;">
-              <img src="./images/port.gif" alt="">
+              <img src="./images/development.jpg" alt="">
               <div class="main-row">
                 <div class="row-text">
                   <h2>Portfolio Development</h2>
